@@ -3857,8 +3857,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 _GLIBCXX_END_NAMESPACE_VERSION
 } // namespace __gnu_cxx
 
-#include "ext/opt_random.h"
-#include "random.tcc"
+#include <ext/opt_random.h>
+#include <ext/random.tcc>
 
 #endif // _GLIBCXX_USE_C99_STDINT_TR1 && UINT32_C
 
